# enable-banking-get-started

./: .env.example  .gitignore  README.md  make_cert.py  pyproject.toml
notebooks/: 01_enable_banking_get_started.ipynb  01_enable_banking_sandbox.ipynb  02_enable_banking_plus_django.ipynb
src/enable_banking/: auth.py  banks.py  client.py  config.py  storage.py
tests/: conftest.py  test_callback.py  test_client_authorization.py  test_storage_sqlite.py
web/callbacks/: urls.py  views.py
web/config/: settings.py  urls.py
