[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enable-banking"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "PyJWT[crypto]>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

web = [
    "Django>=5.2,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
src = ["src"]
line-length = 100